--- a/Source/BetterLoading.csproj
+++ b/Source/BetterLoading.csproj
@@ -54,8 +54,10 @@
   <ItemGroup>
     <Compile Include="BetterLoadingMain.cs" />
     <Compile Include="LoadingScreen.cs" />
-    <Compile Include="LoadingStage.cs" />
+    <Compile Include="EnumLoadingStage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stage\InitialLoad\StageInitMods.cs" />
+    <Compile Include="Stage\LoadingStage.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
