--- a/Source/BetterLoading.csproj
+++ b/Source/BetterLoading.csproj
@@ -11,6 +11,8 @@
     <AssemblyName>BetterLoading</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <LangVersion>8</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -57,6 +59,7 @@
     <Compile Include="EnumLoadingStage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stage\InitialLoad\StageInitMods.cs" />
+    <Compile Include="Stage\InitialLoad\StageReadXML.cs" />
     <Compile Include="Stage\LoadingStage.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
