--- a/Source/BetterLoading.csproj
+++ b/Source/BetterLoading.csproj
@@ -55,6 +55,7 @@
     <Compile Include="LoadingScreen.cs" />
     <Compile Include="EnumLoadingStage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stage\InitialLoad\StageApplyPatches.cs" />
     <Compile Include="Stage\InitialLoad\StageInitMods.cs" />
     <Compile Include="Stage\InitialLoad\StageReadXML.cs" />
     <Compile Include="Stage\InitialLoad\StageUnifyXML.cs" />
