--- a/Source/BetterLoading.csproj
+++ b/Source/BetterLoading.csproj
@@ -34,8 +34,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="0Harmony, Version=2.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>packages\Lib.Harmony.2.0.0\lib\net35\0Harmony.dll</HintPath>
+    <Reference Include="0Harmony, Version=1.2.0.1, Culture=neutral, PublicKeyToken=null">
+      <HintPath>packages\Lib.Harmony.1.2.0.1\lib\net35\0Harmony.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Assembly-CSharp, Version=1.0.7213.22423, Culture=neutral, PublicKeyToken=null">
@@ -62,6 +62,7 @@
     <Compile Include="Stage\InitialLoad\StageReadXML.cs" />
     <Compile Include="Stage\InitialLoad\StageRegisterDef.cs" />
     <Compile Include="Stage\InitialLoad\StageResolveDefDatabases.cs" />
+    <Compile Include="Stage\InitialLoad\StageRunStaticCctors.cs" />
     <Compile Include="Stage\InitialLoad\StageUnifyXML.cs" />
     <Compile Include="Stage\LoadingStage.cs" />
     <Compile Include="Utils.cs" />
