--- a/Source/BetterLoading.csproj
+++ b/Source/BetterLoading.csproj
@@ -12,7 +12,7 @@
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <LangVersion>8</LangVersion>
-    <Nullable>enable</Nullable>
+    <Nullable>annotations</Nullable>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -35,11 +35,15 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony, Version=1.2.0.1, Culture=neutral, PublicKeyToken=null">
-      <HintPath>packages\Lib.Harmony.1.2.0.1\lib\net35\0Harmony.dll</HintPath>
+      <HintPath>packages\UnlimitedHugs.Rimworld.HugsLib.6.1.1\lib\net35\0Harmony.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Assembly-CSharp, Version=1.0.7213.22423, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\..\..\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="HugsLib, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>packages\UnlimitedHugs.Rimworld.HugsLib.6.1.1\lib\net35\HugsLib.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -52,18 +56,21 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BetterLoadingApi.cs" />
     <Compile Include="BetterLoadingMain.cs" />
+    <Compile Include="Compat\HugsLibCompat.cs" />
+    <Compile Include="Compat\HugsLib\StageHugsLibInit.cs" />
     <Compile Include="LoadingScreen.cs" />
     <Compile Include="EnumLoadingStage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Stage\InitialLoad\StageApplyPatches.cs" />
-    <Compile Include="Stage\InitialLoad\StageConstructDefs.cs" />
-    <Compile Include="Stage\InitialLoad\StageInitMods.cs" />
-    <Compile Include="Stage\InitialLoad\StageReadXML.cs" />
-    <Compile Include="Stage\InitialLoad\StageRegisterDef.cs" />
-    <Compile Include="Stage\InitialLoad\StageResolveDefDatabases.cs" />
-    <Compile Include="Stage\InitialLoad\StageRunStaticCctors.cs" />
-    <Compile Include="Stage\InitialLoad\StageUnifyXML.cs" />
+    <Compile Include="Stage\InitialLoad\3StageApplyPatches.cs" />
+    <Compile Include="Stage\InitialLoad\5StageConstructDefs.cs" />
+    <Compile Include="Stage\InitialLoad\0StageInitMods.cs" />
+    <Compile Include="Stage\InitialLoad\1StageReadXML.cs" />
+    <Compile Include="Stage\InitialLoad\4StageRegisterDefs.cs" />
+    <Compile Include="Stage\InitialLoad\6StageResolveDefDatabases.cs" />
+    <Compile Include="Stage\InitialLoad\7StageRunStaticCctors.cs" />
+    <Compile Include="Stage\InitialLoad\2StageUnifyXML.cs" />
     <Compile Include="Stage\LoadingStage.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
