--- a/Source/BetterLoading.csproj
+++ b/Source/BetterLoading.csproj
@@ -64,6 +64,7 @@
     <Compile Include="EnumLoadingStage.cs" />
     <Compile Include="LongEventHandlerMirror.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StageTimingData.cs" />
     <Compile Include="Stage\InitialLoad\3StageApplyPatches.cs" />
     <Compile Include="Stage\InitialLoad\5StageConstructDefs.cs" />
     <Compile Include="Stage\InitialLoad\0StageInitMods.cs" />
