--- a/Source/BetterLoading.csproj
+++ b/Source/BetterLoading.csproj
@@ -1,37 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E08CFC22-1BA8-41FE-A60B-491C308B8B65}</ProjectGuid>
+    <TargetFramework>TargetFramework</TargetFramework>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BetterLoading</RootNamespace>
-    <AssemblyName>BetterLoading</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
+    <TargetFramework>net48</TargetFramework>
     <LangVersion>8</LangVersion>
     <Nullable>annotations</Nullable>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
     <Optimize>true</Optimize>
+    <OutDir>..\1.1\Assemblies\</OutDir>
     <OutputPath>..\1.1\Assemblies\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>..\Assemblies</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <OutDir>..\1.1\Assemblies\</OutDir>
+    <OutputPath>..\1.1\Assemblies\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp, Culture=neutral, PublicKeyToken=null">
@@ -39,10 +22,6 @@
       <HintPath Condition="Exists('..\..\..\RimWorldWin64_Data\')">..\..\..\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath Condition="Exists('../../../RimWorldLinux_Data/')">../../../RimWorldLinux_Data/Managed/UnityEngine.dll</HintPath>
       <HintPath Condition="Exists('..\..\..\RimWorldWin64_Data\')">..\..\..\RimWorldWin64_Data\Managed\UnityEngine.dll</HintPath>
@@ -65,39 +44,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BetterLoadingApi.cs" />
-    <Compile Include="BetterLoadingMain.cs" />
-    <Compile Include="Compat\HugsLibCompat.cs" />
-    <Compile Include="Compat\HugsLib\StageHugsLibInit.cs" />
-    <Compile Include="LoadingScreen.cs" />
-    <Compile Include="EnumLoadingStage.cs" />
-    <Compile Include="LongEventHandlerMirror.cs" />
-    <Compile Include="ModAssemblyHandlerHelper.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StageTimingData.cs" />
-    <Compile Include="Stage\InitialLoad\3StageApplyPatches.cs" />
-    <Compile Include="Stage\InitialLoad\5StageConstructDefs.cs" />
-    <Compile Include="Stage\InitialLoad\0StageInitMods.cs" />
-    <Compile Include="Stage\InitialLoad\1StageReadXML.cs" />
-    <Compile Include="Stage\InitialLoad\4StageRegisterDefs.cs" />
-    <Compile Include="Stage\InitialLoad\6StageResolveDefDatabases.cs" />
-    <Compile Include="Stage\InitialLoad\8StageRunStaticCctors.cs" />
-    <Compile Include="Stage\InitialLoad\2StageUnifyXML.cs" />
-    <Compile Include="Stage\InitialLoad\7StageRunPostLoadPreFinalizeCallbacks.cs" />
-    <Compile Include="Stage\InitialLoad\9StageRunPostFinalizeCallbacks.cs" />
-    <Compile Include="Stage\LoadingStage.cs" />
-    <Compile Include="ToExecuteWhenFinishedHandler.cs" />
-    <Compile Include="Utils.cs" />
-  </ItemGroup>
-  <ItemGroup>
     <PackageReference Include="Lib.Harmony" Version="2.0.0.8" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-         Other similar extension points exist, see Microsoft.Common.targets.
-    <Target Name="BeforeBuild">
-    </Target>
-    <Target Name="AfterBuild">
-    </Target>
-    -->
 </Project>
