--- a/Source/BetterLoading.csproj
+++ b/Source/BetterLoading.csproj
@@ -9,21 +9,18 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <Optimize>true</Optimize>
-    <OutDir>..\1.1-1.2\Assemblies\</OutDir>
-    <OutputPath>..\1.1-1.2\Assemblies\</OutputPath>
+    <OutDir>..\1.3\Assemblies\</OutDir>
+    <OutputPath>..\1.3\Assemblies\</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <OutDir>..\1.1-1.2\Assemblies\</OutDir>
-    <OutputPath>..\1.1-1.2\Assemblies\</OutputPath>
+    <OutDir>..\1.3\Assemblies\</OutDir>
+    <OutputPath>..\1.3\Assemblies\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp, Culture=neutral, PublicKeyToken=null">
       <HintPath Condition="Exists('../../../RimWorldLinux_Data/')">../../../RimWorldLinux_Data/Managed/Assembly-CSharp.dll</HintPath>
       <HintPath Condition="Exists('..\..\..\RimWorldWin64_Data\')">..\..\..\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
-    </Reference>
-    <Reference Include="Assembly-CSharp, Version=1.3.7871.17490, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\..\..\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath Condition="Exists('../../../RimWorldLinux_Data/')">../../../RimWorldLinux_Data/Managed/UnityEngine.dll</HintPath>
@@ -47,6 +44,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Lib.Harmony" Version="2.0.1" />
+    <PackageReference Include="Lib.Harmony" Version="2.1.0" />
   </ItemGroup>
 </Project>
