--- a/Source/BetterLoading.csproj
+++ b/Source/BetterLoading.csproj
@@ -3,8 +3,8 @@
     <TargetFramework>TargetFramework</TargetFramework>
     <OutputType>Library</OutputType>
     <TargetFramework>net48</TargetFramework>
-    <LangVersion>8</LangVersion>
-    <Nullable>annotations</Nullable>
+    <LangVersion>10</LangVersion>
+    <Nullable>enable</Nullable>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -45,5 +45,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Lib.Harmony" Version="2.1.0" />
+    <PackageReference Include="Samboy063.Tomlet" Version="3.1.3" />
   </ItemGroup>
 </Project>
