--- a/Source/BetterLoading.csproj
+++ b/Source/BetterLoading.csproj
@@ -44,7 +44,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Lib.Harmony" Version="2.1.0" />
+    <PackageReference Include="Lib.Harmony" Version="2.2.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>compile; build</IncludeAssets>
+      <ExcludedAssets>runtime</ExcludedAssets>
+    </PackageReference>
     <PackageReference Include="Samboy063.Tomlet" Version="3.1.3" />
   </ItemGroup>
 </Project>
