--- a/Source/BetterLoading.csproj
+++ b/Source/BetterLoading.csproj
@@ -6,42 +6,51 @@
     <LangVersion>10</LangVersion>
     <Nullable>enable</Nullable>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <Configurations>1.3;1.4;1.5</Configurations>
+    <Platforms>AnyCPU</Platforms>
     <Optimize>true</Optimize>
-    <OutDir>..\1.5\Assemblies\</OutDir>
-    <OutputPath>..\1.5\Assemblies\</OutputPath>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)' == '1.5' ">
     <OutDir>..\1.5\Assemblies\</OutDir>
     <OutputPath>..\1.5\Assemblies\</OutputPath>
+    <DefineConstants>RIMWORLD_1_5</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)' == '1.4' ">
+    <DefineConstants>RIMWORLD_1_4</DefineConstants>
+    <OutDir>..\1.4\Assemblies\</OutDir>
+    <OutputPath>..\1.4\Assemblies\</OutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)' == '1.3' ">
+    <DefineConstants>RIMWORLD_1_3</DefineConstants>
+    <OutDir>..\1.3\Assemblies\</OutDir>
+    <OutputPath>..\1.3\Assemblies\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Assembly-CSharp, Culture=neutral, PublicKeyToken=null">
-      <HintPath Condition="Exists('../../../RimWorldLinux_Data/')">../../../RimWorldLinux_Data/Managed/Assembly-CSharp.dll</HintPath>
-      <HintPath Condition="Exists('..\..\..\RimWorldWin64_Data\')">..\..\..\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath Condition="Exists('../../../RimWorldLinux_Data/')">../../../RimWorldLinux_Data/Managed/UnityEngine.dll</HintPath>
-      <HintPath Condition="Exists('..\..\..\RimWorldWin64_Data\')">..\..\..\RimWorldWin64_Data\Managed\UnityEngine.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath Condition="Exists('../../../RimWorldLinux_Data/')">../../../RimWorldLinux_Data/Managed/UnityEngine.CoreModule.dll</HintPath>
-      <HintPath Condition="Exists('..\..\..\RimWorldWin64_Data\')">..\..\..\RimWorldWin64_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine.IMGUIModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath Condition="Exists('../../../RimWorldLinux_Data/')">../../../RimWorldLinux_Data/Managed/UnityEngine.IMGUIModule.dll</HintPath>
-      <HintPath Condition="Exists('..\..\..\RimWorldWin64_Data\')">..\..\..\RimWorldWin64_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine.TextRenderingModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath Condition="Exists('../../../RimWorldLinux_Data/')">../../../RimWorldLinux_Data/Managed/UnityEngine.TextRenderingModule.dll</HintPath>
-      <HintPath Condition="Exists('..\..\..\RimWorldWin64_Data\')">..\..\..\RimWorldWin64_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
+<!--    <Reference Include="Assembly-CSharp, Culture=neutral, PublicKeyToken=null">-->
+<!--      <HintPath Condition="Exists('../../../RimWorldLinux_Data/')">../../../RimWorldLinux_Data/Managed/Assembly-CSharp.dll</HintPath>-->
+<!--      <HintPath Condition="Exists('..\..\..\RimWorldWin64_Data\')">..\..\..\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>-->
+<!--      <Private>False</Private>-->
+<!--    </Reference>-->
+<!--    <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">-->
+<!--      <HintPath Condition="Exists('../../../RimWorldLinux_Data/')">../../../RimWorldLinux_Data/Managed/UnityEngine.dll</HintPath>-->
+<!--      <HintPath Condition="Exists('..\..\..\RimWorldWin64_Data\')">..\..\..\RimWorldWin64_Data\Managed\UnityEngine.dll</HintPath>-->
+<!--      <Private>False</Private>-->
+<!--    </Reference>-->
+<!--    <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">-->
+<!--      <HintPath Condition="Exists('../../../RimWorldLinux_Data/')">../../../RimWorldLinux_Data/Managed/UnityEngine.CoreModule.dll</HintPath>-->
+<!--      <HintPath Condition="Exists('..\..\..\RimWorldWin64_Data\')">..\..\..\RimWorldWin64_Data\Managed\UnityEngine.CoreModule.dll</HintPath>-->
+<!--      <Private>False</Private>-->
+<!--    </Reference>-->
+<!--    <Reference Include="UnityEngine.IMGUIModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">-->
+<!--      <HintPath Condition="Exists('../../../RimWorldLinux_Data/')">../../../RimWorldLinux_Data/Managed/UnityEngine.IMGUIModule.dll</HintPath>-->
+<!--      <HintPath Condition="Exists('..\..\..\RimWorldWin64_Data\')">..\..\..\RimWorldWin64_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>-->
+<!--      <Private>False</Private>-->
+<!--    </Reference>-->
+<!--    <Reference Include="UnityEngine.TextRenderingModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">-->
+<!--      <HintPath Condition="Exists('../../../RimWorldLinux_Data/')">../../../RimWorldLinux_Data/Managed/UnityEngine.TextRenderingModule.dll</HintPath>-->
+<!--      <HintPath Condition="Exists('..\..\..\RimWorldWin64_Data\')">..\..\..\RimWorldWin64_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>-->
+<!--      <Private>False</Private>-->
+<!--    </Reference>-->
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Lib.Harmony" Version="2.2.1">
@@ -49,6 +58,9 @@
       <IncludeAssets>compile; build</IncludeAssets>
       <ExcludedAssets>runtime</ExcludedAssets>
     </PackageReference>
-    <PackageReference Include="Samboy063.Tomlet" Version="3.1.3" />
+    <PackageReference Include="Samboy063.Tomlet" Version="3.1.3" ExcludeAssets="runtime" />
+    <PackageReference Include="Krafs.Rimworld.Ref" Version="1.5.4042-beta" Condition=" '$(Configuration)' == '1.5' "  ExcludeAssets="runtime" />
+    <PackageReference Include="Krafs.Rimworld.Ref" Version="1.4.3901" Condition=" '$(Configuration)' == '1.4' "  ExcludeAssets="runtime" />
+    <PackageReference Include="Krafs.Rimworld.Ref" Version="1.3.3389" Condition=" '$(Configuration)' == '1.3' "  ExcludeAssets="runtime" />
   </ItemGroup>
 </Project>
