--- a/Source/BetterLoading.csproj
+++ b/Source/BetterLoading.csproj
@@ -58,7 +58,7 @@
       <IncludeAssets>compile; build</IncludeAssets>
       <ExcludedAssets>runtime</ExcludedAssets>
     </PackageReference>
-    <PackageReference Include="Samboy063.Tomlet" Version="3.1.3" ExcludeAssets="runtime" />
+    <PackageReference Include="Samboy063.Tomlet" Version="3.1.3" />
     <PackageReference Include="Krafs.Rimworld.Ref" Version="1.5.4042-beta" Condition=" '$(Configuration)' == '1.5' "  ExcludeAssets="runtime" />
     <PackageReference Include="Krafs.Rimworld.Ref" Version="1.4.3901" Condition=" '$(Configuration)' == '1.4' "  ExcludeAssets="runtime" />
     <PackageReference Include="Krafs.Rimworld.Ref" Version="1.3.3389" Condition=" '$(Configuration)' == '1.3' "  ExcludeAssets="runtime" />
